website: update ru/events
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D55358

--- a/website/data/ru/events/events2026.toml
+++ b/website/data/ru/events/events2026.toml
@@ -36,8 +36,32 @@ city = "Утрехт"
 site = "Пивоварня Maximus"
 description = "BSD-NL направлено на то, чтобы собрать вместе единомышленников, вне зависимости от того, являетесь ли вы любителем, энтузиастом, экспертом, разработчиком, администратором сети или системным администратором. Двери открыты каждому! Тех встреч, что случаются один или два раза в год на EuroBSDCon, BSDCan или AsiaBSDCon, недостаточно! Поэтому мы решили основать BSD-NL, Сообщество BSD в Нидерландах. Для всех интересующихся *BSD, будь то FreeBSD, OpenBSD, NetBSD, DragonFlyBSD, HardenedBSD, SecBSD или любая другая *BSD."
 
+[[events]]
+id = "bsdcan-2026"
+name = "BSDCan 2026"
+url = "https://www.bsdcan.org/2026/"
+startDate = "2026-06-17"
+endDate = "2026-06-20"
+countryCode = "CA"
+country = "Канада"
+city = "Оттава"
+site = "Университет Оттавы"
+description = "BSDCan — это главное событие BSD в Северной Америке, которое приветствует разработчиков BSD Unix, администраторов и пользователей любого уровня опыта. Получите прямой доступ к дружелюбным людям, которые обеспечивают бесперебойную работу интернета и развивают ваши любимые современные продукты и услуги. Не имеет значения, застенчивы Вы или общительны, мы рады приветствовать вас!"
+
+[[events]]
+id = "eurobsdcon-2026"
+name = "EuroBSDCon 2026"
+url = "https://2026.eurobsdcon.org"
+startDate = "2026-09-09"
+endDate = "2026-09-13"
+countryCode = "BE"
+country = "Бельгия"
+city = "Брюссель"
+site = "Главный кампус VUB в Эттербеке"
+description = "EuroBSDCon — это международная ежегодная техническая конференция, проводимая каждый год в разных европейских странах. Она направлена на объединение пользователей и разработчиков, работающих с операционными системами семейства 4.4BSD (Berkeley Software Distribution) и связанными проектами."
+
 #
 # The FreeBSD Russian Documentation Project
 #
-# Original EN revision (08.02.2026): 2e36ed4b7acfec66cc85616e9c082f2d3471ace2
+# Original EN revision (11.02.2026): 9905d1c1be7fd474c6bcea958e1caab97801de14
 #
