--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -11,6 +11,10 @@ title = "FreeBSD 14.4-BETA3 Available"
 description = "The third BETA build for the FreeBSD 14.4 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2026-February/003866.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
 
 [[news]]
+date = "2026-02-18"
+description = "New committer: <a href=\"mailto:nxjoseph@FreeBSD.org\">Yusuf Yaman</a> (ports)"
+
+[[news]]
 date = "2026-02-15"
 title = "FreeBSD 14.4-BETA2 Available"
 description = "The second BETA build for the FreeBSD 14.4 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2026-February/003848.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
