--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date= "2026-02-22"
+title = "October-December 2026 Status Report"
+description = "The <a href=\"https://www.freebsd.org/status/report-2025-10-2025-12/\">October to December Status Report</a> is now available with 28 entries."
+
+[[news]]
 date = "2026-02-22"
 title = "FreeBSD 14.4-BETA3 Available"
 description = "The third BETA build for the FreeBSD 14.4 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2026-February/003866.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
