website: update ru/news - SA translated
Differential Revision: https://reviews.freebsd.org/D55515

--- a/website/data/ru/news/news.toml
+++ b/website/data/ru/news/news.toml
@@ -1,8 +1,19 @@
 # Новости сортируются по году, месяцу и дню
 
 [[news]]
+date = "2026-02-24"
+title = "Устранена уязвимость в маршрутизации FreeBSD, вызывавшая отказ в обслуживании"
+description = "<a href=\"/security/advisories/FreeBSD-SA-26:05.route.asc\">Бюллетень безопасности</a>. Устранена уязвимость (CVE-2026-3038) в интерфейсе сокетов маршрутизации (route). Непривилегированный пользователь может отправить специально сформированный запрос, вызывающий переполнение буфера стека в ядре. Это приводит к повреждению стека и неминуемому аварийному завершению системы, вызывая отказ в обслуживании (DoS). В сочетании с другими гипотетическими ошибками возможна локальная эскалация привилегий. Проблема затрагивает все поддерживаемые версии FreeBSD. Исправления уже выпущены, администраторам рекомендуется срочно обновить системы."
+
+[[news]]
+date = "2026-02-24"
+title = "Устранена возможность выхода из jail (CVE-2025-15576)"
+description = "<a href=\"/security/advisories/FreeBSD-SA-26:04.jail.asc\">Бюллетень безопасности</a>. Устранена уязвимость (CVE-2025-15576) в механизме клеток (jail). Проблема позволяет процессам в двух разных клетках, имеющих общее nullfs-монтирование и возможность обмена файловыми дескрипторами через UNIX-сокеты, получить доступ к файловой системе хоста за пределами своего окружения. Это приводит к полному \"побегу\" из клетки. Уязвимость затрагивает FreeBSD 14.3 и 13.5. Исправления уже включены в стабильные ветки и релизы обновлений. Администраторам рекомендуется незамедлительно обновить системы."
+
+
+[[news]]
 date= "2026-02-22"
-title = "Отчёт о состоянии за октябрь-декабрь 2025 года"
+title = "Отчёт о состоянии за октябрь-декабрь 2025 года (на русском языке)"
 description = "Опубликован <a href=\"https://www.freebsd.org/ru/status/report-2025-10-2025-12/\">Отчёт о состоянии работ с ноября по декабрь 2025</a> с 28 записями (на русском языке)."
 
 [[news]]
